--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,15 @@
 				<li class="nav-item">
 					<a class="nav-link" href="{% url 'upload_file' %}">Upload File</a>
 				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="{% url 'create_playlist' %}">Create Playlist</a>
+				</li>
 			</ul>
 			<ul class="navbar-nav ml-auto">
+				<form class="form-inline my-2 my-lg-0" method="post" action="/search/"> {% csrf_token %}
+					<input class="form-control mr-sm-2" type="search" placeholder="File name" aria-label="Search" name='filename'>
+					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+				</form>
 				<li class="nav-item">
 					<a class="nav-link" href="{% url 'logout_user' %}">Logout</a>
 				</li>
